kubernetes/apps/stump/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stump
  labels:
    app: stump
spec:
  selector:
    matchLabels:
      app: stump
  template:
    metadata:
      labels:
        app: stump
    spec:
      containers:
        - name: stump
          image: aaronleopold/stump:0.1.9 # {"$imagepolicy": "apps:stump"}
          ports:
            - containerPort: 10801
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /books
              name: books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: stump-config-pvc
        - name: books
          persistentVolumeClaim:
            claimName: books-pvc
