kubernetes/apps/stump/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stump
spec:
  selector:
    app: stump
  ports:
    - protocol: TCP
      port: 10801
